--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <h2>SESSION ID</h2>
-    <span th:text="${sessionId}"></span>
+
+
+    <h3>Spring Boot - Usted ha visitado <span th:text="${contador}"></span> veces - Puerto:<span th:text="${puerto}"></span> - ID Sesion:<span th:text="${sessionId}"></span> %s </h3>
+
 </body>
 </html>
